--- a/CategoryTheory/CategoryTheory.fsproj
+++ b/CategoryTheory/CategoryTheory.fsproj
@@ -4,4 +4,16 @@
         <TargetFramework>netcoreapp2.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <None Include="Chapters\1.1-Category-The-Essence-of-Composition.fsx" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="FSharp.Formatting" Version="2.14.4" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Include="Chapters\1.1-Category-The-Essence-of-Composition.fsi" />
+    </ItemGroup>
+
 </Project>
